# platzi-langchain-ai-agent

./: README.md  environment.yml  pyproject.toml  requirements.txt
data/raw/csv/: csvai.csv
data/raw/html/: webai.html
data/raw/txt/: txtai.txt
notebooks/: 01_jss_langchain_intro.ipynb  02_jss_langchain_genai.ipynb  03_jss_langchain_messages.ipynb  04_jss_langchain_chat_model.ipynb  05_jss_langchain_prompt_template.ipynb  06_few_shot_propmting.ipynb  07_jss_langchain_chain.ipynb  08_jss_langchain_history.ipynb  09_jss_langchain_runnable_perser.ipynb  10_jss_langchain_memory.ipynb  11_jss_langchain_html.ipynb  12_jss_lanchain_pdf.ipynb  13_jss_lanchain_text_splitter.ipynb  14_jss_langchain_vectors.ipynb
references/: 10_introduccion_a_chains_y_lcel.ipynb  11_chat_con_historial.ipynb  12_integracion_de_cadena_runnable_y_outputparser.ipynb  13_chat_memory_14_implementacion_de_memoria_en_cadenas.ipynb  16_cargar_html_y_directorio_con_langchain.ipynb  17_text_splitters.ipynb  18_introduccion_a_embeddings-1.ipynb  1_demo.ipynb  2_introduccion_a_langchain.ipynb  4_instalacion_y_configuracion_de_langchain_66a1d3bf-4893-406d-a786-628b33b3412f.ipynb  5_instalacion_y_configuracion_de_langchain.ipynb  6_chat_messages_con_openai_761f1d73-43b4-4549-89ce-dd0e5ff4136f.ipynb  8_prompt_templates_en_langchain.ipynb  9_tipos_de_chattemplates_few_shot_prompting.ipynb
src/: main.py
src/config/: config.py  paths.py
